[package]
name = "starknet-signature"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
proof-essentials = { git = "ssh://git@github.com/geometryresearch/proof-toolbox.git" }
starknet-curve = { git = "ssh://git@github.com/geometryresearch/proof-toolbox.git" }
rand = "0.8.4"
thiserror = "1.0.30"
zeroize = "1.5.5"
crypto-bigint = { version = "0.4.7", features = ["generic-array"] }
hmac = "0.12.1"
rfc6979 = "0.2.0"
sha2 = "0.10.2"
lazy_static = "1.4.0"
generic-array = "0.14.5"