[metadata]
name = starknet-sig-verifier
description = Starknet signature verifier
author = Geometry Research
author_email = marcello@geometryresearch.xyz
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =packages/verifier/src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
openzeppelin = "*.cairo"

[options.extras_require]
testing =
    setuptools
    tox
    pytest